💄 fix skill modal on mobile

--- a/_includes/css/mine.css
+++ b/_includes/css/mine.css
@@ -15,6 +15,10 @@
     background-color: #f3f3f3;
     position:fixed;
     padding: 10px;
+    @media (max-width: 600px) {
+        left: 0;
+        width: 100%;
+    }
 }
 
 .skills-modal p{
@@ -25,4 +29,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.modal-open{
+    padding: 0 !important;
 }
